# Chess-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: constants.h  engine.h  game.h  grid.h  stockfish.h
src/: engine.cpp  game.cpp  grid.cpp  main.cpp  stockfish.c
